objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Contract</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed - Successful</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Delivering on Delight</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Created in Error</fullName>
        </values>
        <values>
            <fullName>Closed - Invalid</fullName>
        </values>
        <values>
            <fullName>Closed - Successful</fullName>
        </values>
        <values>
            <fullName>Closed - Unsuccessful</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ready for Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Email and Web Inquiries</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Callout</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-open</fullName>
        </values>
        <values>
            <fullName>Ready for Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Created in Error</fullName>
        </values>
        <values>
            <fullName>Closed - New Round</fullName>
        </values>
        <values>
            <fullName>Closed - Successful</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>Closed - Unsuccessful</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard with Call for Pick</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Call for Pick</fullName>
        </values>
        <values>
            <fullName>Closed - Created in Error</fullName>
        </values>
        <values>
            <fullName>Closed - Successful</fullName>
        </values>
        <values>
            <fullName>Closed - Unsuccessful</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard with Cancelled</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed - Created in Error</fullName>
        </values>
        <values>
            <fullName>Closed - Successful</fullName>
        </values>
        <values>
            <fullName>Closed - Unsuccessful</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard with Review</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Created in Error</fullName>
        </values>
        <values>
            <fullName>Closed - Successful</fullName>
        </values>
        <values>
            <fullName>Closed - Unsuccessful</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ready for Review</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Acc_Address_1__c</fullName>
        <label>Acc Address 1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Address_2__c</fullName>
        <label>Acc Address 2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Address_Type__c</fullName>
        <label>Acc Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOLD TO</fullName>
                </value>
                <value>
                    <fullName>SHIP TO</fullName>
                </value>
                <value>
                    <fullName>SPECIAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acc_City__c</fullName>
        <label>Acc City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Company__c</fullName>
        <label>Acc Company</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Country_Code__c</fullName>
        <label>Acc Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Email__c</fullName>
        <label>Acc Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Expiration__c</fullName>
        <label>Acc Expiration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acc_First_Name__c</fullName>
        <label>Acc First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Last_Name__c</fullName>
        <label>Acc Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Postal_Code__c</fullName>
        <label>Acc Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Requesting_User__c</fullName>
        <label>Acc Requesting User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_State__c</fullName>
        <label>Acc State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Type__c</fullName>
        <label>Acc Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accommodation_Given__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if an accommodation was given to the customer</inlineHelpText>
        <label>Accommodation Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accommodation_Is_Greater_Than_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Your Accommodation Amount is over your Order Total. Please check the box to indicate that this is accurate.</inlineHelpText>
        <label>Accommodation Is Greater Than Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accommodation_Reason__c</fullName>
        <label>Accommodation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Transfer</fullName>
                </value>
                <value>
                    <fullName>Carrier Caused - HDL</fullName>
                </value>
                <value>
                    <fullName>Carrier Caused - UPS</fullName>
                </value>
                <value>
                    <fullName>Damaged/Defective Product</fullName>
                </value>
                <value>
                    <fullName>Delay - Backorder</fullName>
                </value>
                <value>
                    <fullName>Delay - DC</fullName>
                </value>
                <value>
                    <fullName>Delay - Vendor</fullName>
                </value>
                <value>
                    <fullName>Delight Shipping</fullName>
                </value>
                <value>
                    <fullName>Freight - Canadian Adjustment/Refund</fullName>
                </value>
                <value>
                    <fullName>Freight - Flat Rate Delivery Fee Refund</fullName>
                </value>
                <value>
                    <fullName>Freight Refund</fullName>
                </value>
                <value>
                    <fullName>Freight - US Adjustment/Refund</fullName>
                </value>
                <value>
                    <fullName>Gift Box Fee Refund</fullName>
                </value>
                <value>
                    <fullName>Gift Return</fullName>
                </value>
                <value>
                    <fullName>Mailed in Gift Card</fullName>
                </value>
                <value>
                    <fullName>Manual Charge</fullName>
                </value>
                <value>
                    <fullName>Out Of Policy Return</fullName>
                </value>
                <value>
                    <fullName>Personalization Fee Refund</fullName>
                </value>
                <value>
                    <fullName>Pre-Bill Refund</fullName>
                </value>
                <value>
                    <fullName>Price Match – Sale/Promo</fullName>
                </value>
                <value>
                    <fullName>Refund for GC/SC/Reward MOP</fullName>
                </value>
                <value>
                    <fullName>Reissue System Refund – Incorrect/Cancelled/Did Not Generate</fullName>
                </value>
                <value>
                    <fullName>Tax Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accommodation_Requested_By_Gallery__c</fullName>
        <label>Accommodation Requested By Gallery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>005 - Newport Beach</fullName>
                </value>
                <value>
                    <fullName>006 - Corte Madera</fullName>
                </value>
                <value>
                    <fullName>008 - Portland</fullName>
                </value>
                <value>
                    <fullName>010 - Palo Alto</fullName>
                </value>
                <value>
                    <fullName>011 - Pasadena</fullName>
                </value>
                <value>
                    <fullName>015 - Troy</fullName>
                </value>
                <value>
                    <fullName>017 - St. Louis</fullName>
                </value>
                <value>
                    <fullName>020 - Dallas</fullName>
                </value>
                <value>
                    <fullName>024 - Seattle U Village</fullName>
                </value>
                <value>
                    <fullName>025 - King of Prussia</fullName>
                </value>
                <value>
                    <fullName>027 - McLean</fullName>
                </value>
                <value>
                    <fullName>031 - Metairie</fullName>
                </value>
                <value>
                    <fullName>034 - Charlotte</fullName>
                </value>
                <value>
                    <fullName>035 - San Antonio</fullName>
                </value>
                <value>
                    <fullName>036 - Pittsburgh</fullName>
                </value>
                <value>
                    <fullName>041 - Tampa</fullName>
                </value>
                <value>
                    <fullName>044 - Aventura</fullName>
                </value>
                <value>
                    <fullName>046 - Birmingham</fullName>
                </value>
                <value>
                    <fullName>048 - Short Hills</fullName>
                </value>
                <value>
                    <fullName>051 - Edina</fullName>
                </value>
                <value>
                    <fullName>053 - Washington DC</fullName>
                </value>
                <value>
                    <fullName>054 - Nashville</fullName>
                </value>
                <value>
                    <fullName>057 - Denver</fullName>
                </value>
                <value>
                    <fullName>061 - Walnut Creek</fullName>
                </value>
                <value>
                    <fullName>062 - New York</fullName>
                </value>
                <value>
                    <fullName>070 - Chicago/ Lincoln Park</fullName>
                </value>
                <value>
                    <fullName>071 - Oakbrook</fullName>
                </value>
                <value>
                    <fullName>072 - Red Bank</fullName>
                </value>
                <value>
                    <fullName>073 - WinterPark</fullName>
                </value>
                <value>
                    <fullName>074 - Thousand Oaks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accommodation_Sub_Reason__c</fullName>
        <label>Accommodation Sub-Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is checked if action is required on the case</description>
        <label>Action Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CW SKU</fullName>
                </value>
                <value>
                    <fullName>CW Data Entry Needed</fullName>
                </value>
                <value>
                    <fullName>Needs a Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Gift_Card_Amount__c</fullName>
        <inlineHelpText>The actual value of the Gift Card due to a delayed order that will be communicated to the client via Delay Notification email. This does not have to be the same value as the Calculated Gift Card Amount.</inlineHelpText>
        <label>Actual Gift Card Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Line_Accommodation_Amount__c</fullName>
        <label>Actual Line Accommodation Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Order_Accommodation_Amount_Given__c</fullName>
        <description>Actual Order Accommodation Amount processed by Accommodations Team</description>
        <label>Actual Order Accommodation Amount Given</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <inlineHelpText>Brief background on customer issue that lead to escalation</inlineHelpText>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_To_Email_Addresses__c</fullName>
        <label>Additional To Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_Request_SPI__c</fullName>
        <formula>IF(ISPICKVAL(DRS_reason__c, &apos;&apos;), TODAY() - DATEVALUE(CreatedDate), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Request (SPI)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alt_Email_Address__c</fullName>
        <label>Alt Email Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_Shipping_Address__c</fullName>
        <label>Alternative Shipping Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_Collected__c</fullName>
        <label>Amount Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not on Fire - High Risk</fullName>
                </value>
                <value>
                    <fullName>Not on Fire - Low Risk</fullName>
                </value>
                <value>
                    <fullName>On-Fire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To_Email__c</fullName>
        <label>Assigned To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attempted_Contact__c</fullName>
        <description>This field is used to count the amount of attempted contacts. It is incremented both by trigger and workflow count.</description>
        <label>Attempted Contact</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_C_Monogram_Border__c</fullName>
        <label>B&amp;C Monogram Border</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Monogram_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Clipped Corner</fullName>
                </value>
                <value>
                    <fullName>Crown</fullName>
                </value>
                <value>
                    <fullName>Dotted</fullName>
                </value>
                <value>
                    <fullName>Double Circle</fullName>
                </value>
                <value>
                    <fullName>Side Brackets</fullName>
                </value>
                <value>
                    <fullName>Side Dots</fullName>
                </value>
                <value>
                    <fullName>Single Line</fullName>
                </value>
                <value>
                    <fullName>Stamp Circle</fullName>
                </value>
                <value>
                    <fullName>Star</fullName>
                </value>
                <value>
                    <fullName>No Border</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_C_Monogram_Script__c</fullName>
        <label>B&amp;C Monogram Script</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Monogram_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lowercase Text</fullName>
                </value>
                <value>
                    <fullName>Mixed Case Text</fullName>
                </value>
                <value>
                    <fullName>Single Initial</fullName>
                </value>
                <value>
                    <fullName>Triple Initials</fullName>
                </value>
                <value>
                    <fullName>Triple Monogram</fullName>
                </value>
                <value>
                    <fullName>Upper Case Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blank_Reason__c</fullName>
        <label>Blank Reason</label>
        <summaryFilterItems>
            <field>Case_Line_Items__c.Reason__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Line_Items__c.Case_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Box_Type__c</fullName>
        <label>Box Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baby &amp; Child</fullName>
                </value>
                <value>
                    <fullName>RH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baby &amp; Child</fullName>
                </value>
                <value>
                    <fullName>Contemporary Art</fullName>
                </value>
                <value>
                    <fullName>Modern</fullName>
                </value>
                <value>
                    <fullName>RH</fullName>
                </value>
                <value>
                    <fullName>Teen</fullName>
                </value>
                <value>
                    <fullName>Cross Brand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ByPassValidationRule__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used to bypass validation rule</description>
        <label>ByPassValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCD_Auto_Email_Sent__c</fullName>
        <label>CCD Auto Email Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCD_Email_Subject__c</fullName>
        <label>CCD Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCD_Final_Notice_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCD Final Notice Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCD_Status__c</fullName>
        <label>CCD Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Queue_Transfer__c</fullName>
        <label>CSC Queue Transfer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CW_SKU_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CW SKU ID</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculated_Gift_Card_Amount__c</fullName>
        <inlineHelpText>The calculated and suggested amount of a Gift Card due to a delayed order.</inlineHelpText>
        <label>Calculated Gift Card Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Outcome__c</fullName>
        <description>This will be autopopulated via trigger from the case comments object.</description>
        <label>Call Outcome</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Called_in_By__c</fullName>
        <label>Called in By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Driver - In Home</fullName>
                </value>
                <value>
                    <fullName>Driver  - Not In Home</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller__c</fullName>
        <label>Caller</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callout_Contacts__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Set automatically by trigger.  Records the number of times the customer was actually reached via phone.</inlineHelpText>
        <label>Callout Contacts per Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseAssignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field.  Set by class.method CaseAssignmentClass.findCase and cleared by workflow rule ClearCaseAssignment.  This field is used in Case validation rules so that we can control when it is OK for certain profiles to set the Status field to specific values.</description>
        <label>CaseAssignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseLineAccommodationGreaterThanTotal__c</fullName>
        <description>Hidden field.  Roll up Sum of the AccomodationGreaterThanTotal field on related Case Line Item records.  This field is used by Case workflow rule CaseAccommodationGreaterThanTotal to automatically set the Accommodation Is Greater Than Total check box.</description>
        <label>CaseLineAccommodationGreaterThanTotal</label>
        <summarizedField>Case_Line_Items__c.AccommodationGreaterThanTotal__c</summarizedField>
        <summaryForeignKey>Case_Line_Items__c.Case_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Closed__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is needed for the Timeline app feature.</description>
        <formula>IsClosed</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Created_By_Alias__c</fullName>
        <formula>CreatedBy.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Created By Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Creation_Location__c</fullName>
        <label>Case Creation Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Creator_Gallery__c</fullName>
        <formula>TEXT(CreatedBy.Gallery__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Creator Gallery</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Creator_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Creator Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Last_Modified_Role__c</fullName>
        <formula>LastModifiedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Last Modified Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Last_modified_By_Alias__c</fullName>
        <formula>LastModifiedBy.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Last Modified By Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Line Item</label>
        <referenceTo>Case_Line_Items__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number_and_Record_Type__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is needed for the Timeline app feature.</description>
        <formula>CaseNumber + &quot; - &quot; + SUBSTITUTE(Record_Type_Dev_Name__c, &quot;_&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number and Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Open__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is needed for the Timeline app feature.</description>
        <formula>!IsClosed</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Order__c</fullName>
        <formula>RH_Order_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Alias__c</fullName>
        <formula>Owner:User.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Notes__c</fullName>
        <label>Case Resolution Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_URL__c</fullName>
        <formula>&quot;https://restorationhardware--uat.cs3.my.salesforce.com/&quot; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checklist_CDN_Number__c</fullName>
        <inlineHelpText>If Checklist/CDN is unknown enter 0</inlineHelpText>
        <label>Checklist/CDN Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Property Damage</fullName>
                </value>
                <value>
                    <fullName>Lost/Damage Freight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clarifying_Notes__c</fullName>
        <label>Clarifying Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>